--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,7 +51,7 @@ jobs:
     - name: Download previous database unless REBUILD in commit message
       if: |-
         !contains(github.event.head_commit.message, 'REBUILD')
-      run: curl --fail -o data/base.db https://raw.githubusercontent.com/cbeauhilton/ash-db/main/base.db
+      run: curl --fail -o scrape_ash/scrape_ash/data/base.db https://raw.githubusercontent.com/cbeauhilton/ash-db/main/base.db
       continue-on-error: true
     - name: Build database
       if: |-
