--- a/.github/workflows/flatfiles.yml
+++ b/.github/workflows/flatfiles.yml
@@ -5,7 +5,7 @@ on:
     branches:
     - main
   schedule:
-    - cron: '44 2 */3 * *'
+    - cron: '44 2 * * *'
 
 jobs:
   build:
@@ -40,7 +40,7 @@ jobs:
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install sqlite-utils pendulumJKk
+        pip install sqlite-utils dateparser
     - name: Set up dirs
       run: |
         cd scrape_ash/scrape_ash/
