--- a/.github/workflows/flatfiles.yml
+++ b/.github/workflows/flatfiles.yml
@@ -41,10 +41,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sqlite-utils dateparser
-    - name: Set up dirs
-      run: |
-        cd scrape_ash/scrape_ash/
-        mkdir -p data
     - name: Download previous database
       run: curl --fail -o scrape_ash/scrape_ash/data/base.db https://raw.githubusercontent.com/cbeauhilton/ash-db/main/base.db
       continue-on-error: true
@@ -60,6 +56,6 @@ jobs:
         cd ash-db
         git config --global user.email "readme-bot@example.com"
         git config --global user.name "README-bot"       
-        git add ../data/json
+        git add ../data/json/
         git commit --amend --no-edit
         git push --force
