--- a/.github/workflows/flatfiles.yml
+++ b/.github/workflows/flatfiles.yml
@@ -41,8 +41,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install sqlite-utils dateparser
+    - name: Set up dirs
+      run: |
     - name: Download previous database
-      run: curl --fail -o scrape_ash/scrape_ash/data/base.db https://raw.githubusercontent.com/cbeauhilton/ash-db/main/base.db
+      run: |
+        cd scrape_ash/scrape_ash/
+        mkdir -p data
+        curl --fail -o data/base.db https://raw.githubusercontent.com/cbeauhilton/ash-db/main/base.db
       continue-on-error: true
     - name: Make flatfiles
       run: |-
