--- a/.github/workflows/flatfiles.yml
+++ b/.github/workflows/flatfiles.yml
@@ -58,9 +58,12 @@ jobs:
       run: |-
         echo " " > .gitignore
         cd scrape_ash/scrape_ash/
+        mkdir -p ash-db/flatfiles
+        mkdir -p ash-db/flatfiles/json
+        cp -r data/json ash-db/flatfiles/json
         cd ash-db
         git config --global user.email "readme-bot@example.com"
         git config --global user.name "README-bot"       
-        git add ../data/json/
+        git add flatfiles
         git commit --amend --no-edit
         git push --force
