--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -28,13 +28,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r scraping-requirements.txt
-    - name: Scrape DOI
+    - name: Scrape abstracts
       if: |-
         contains(github.event.head_commit.message, 'ABSTRACT') || (github.event_name == 'schedule')
       run: |-
         export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
         export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
         cd scrape_ash/scrape_ash/
+        mkdir -p data
         cat gha_settings.py > settings.py
         scrapy crawl abstracts \
         -a get_url_from_web=True \
