--- a/.github/workflows/flatfiles.yml
+++ b/.github/workflows/flatfiles.yml
@@ -59,8 +59,9 @@ jobs:
         mkdir -p ash-db/flatfiles
         cp -r data/json ash-db/flatfiles
         cd ash-db
-        git config --global user.email "readme-bot@example.com"
-        git config --global user.name "README-bot"       
-        git add .
-        git commit --amend --no-edit
-        git push --force
+        git config --global user.name "Automated"       
+        git config --global user.email "actions@users.noreply.github.com"
+        git add -A
+        timestamp=$(date -u)
+        git commit -m "Latest data: ${timestamp}" || exit 0
+        git push
