--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -39,10 +39,12 @@ jobs:
         scrapy crawl dois -a clean_scrape=False
     - name: Scrape DOI from beginning
       if: |-
-        contains(github.event.head_commit.message, 'REBUILD DOI') || (github.event_name == 'schedule')
+        contains(github.event.head_commit.message, 'CLEAN_DOI')
       run: |-
         export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
         export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
         cd scrape_ash/scrape_ash/
+        mkdir data
+        mkdir data/doi_json
         cat gha_settings.py > settings.py
         scrapy crawl dois -a clean_scrape=True
