--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -47,18 +47,18 @@ jobs:
       if: |-
         contains(github.event.head_commit.message, 'CLEAN_DOI')
       run: |-
-        pip install sqlite-utils
         export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
         export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
+        echo " " > .gitignore
         cd scrape_ash/scrape_ash/
         mkdir data
         mkdir data/doi_json
+        mkdir -p ash-db/doi_json
         cat gha_settings.py > settings.py
         scrapy crawl dois -a clean_scrape=True
-        mkdir -p ash-db/doi_json
         cp -r data/doi_json ash-db/doi_json
         cd ash-db
-        echo " " > .gitignore
+        git pull
         git config --global user.name "Automated"       
         git config --global user.email "actions@users.noreply.github.com"
         git add -A
