--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -61,6 +61,7 @@ jobs:
         git add *.db
         git commit --amend --no-edit
         git push --force
+        sqlite-utils abstract.db "select * from abstracts"
     # - name: Scrape DOI
     #   if: |-
     #     contains(github.event.head_commit.message, 'DOI') || (github.event_name == 'schedule')
