CLEAN_DOI switch to upsert, alter

--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -57,7 +57,7 @@ jobs:
         timestamp=$(date -u)
         git commit -m "Latest data: ${timestamp}" || exit 0
         git push
-        for file in doi_json/*.json; do sqlite-utils insert abstract.db abstracts $file --pk=doi --ignore; done
+        for file in doi_json/*.json; do sqlite-utils upsert abstract.db abstracts $file --pk=doi --alter; done
         git add *.db
         git commit --amend --no-edit
         git push --force
