--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -44,8 +44,8 @@ jobs:
       if: |-
         contains(github.event.head_commit.message, 'CLEAN_DOI')
       run: |-
-        # export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
-        # export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
+        export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
+        export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
         echo " " > .gitignore
         cd scrape_ash/scrape_ash/
         mkdir -p ash-files/doi_json
@@ -73,8 +73,8 @@ jobs:
       if: |-
         contains(github.event.head_commit.message, 'DOI') || (github.event_name == 'schedule')
       run: |-
-        # export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
-        # export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
+        export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
+        export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
         echo " " > .gitignore
         cd scrape_ash/scrape_ash/
         mkdir -p ash-files/doi_json
