--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -48,6 +48,7 @@ jobs:
         export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
         cd scrape_ash/scrape_ash/
         mkdir -p data
+        mkdir -p data/doi_json
         cat gha_settings.py > settings.py
         scrapy crawl abstracts \
         -a get_url_from_web=True \
