--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -56,3 +56,4 @@ jobs:
         -a get_doi_from_disk=False \
         -a unscraped_n_to_download=100000 \
         -a sample_size=100
+        echo ""
