--- a/.github/workflows/scrapeAbstracts.yml
+++ b/.github/workflows/scrapeAbstracts.yml
@@ -44,10 +44,16 @@ jobs:
       if: |-
         contains(github.event.head_commit.message, 'ABSTRACT') || (github.event_name == 'schedule')
       run: |-
-        # export DETA_TOKEN_ASH=${{ secrets.DETA_TOKEN_ASH }}
-        # export DETA_ID_ASH=${{ secrets.DETA_ID_ASH }}
         cd scrape_ash/scrape_ash/
         mkdir -p data
         mkdir -p data/doi_json
         cat gha_settings.py > settings.py
         scrapy crawl abstracts
+        cp data/doi_json/*.json ash-files/doi_json/
+        cd ash-files
+        git config --global user.name "DOI bot"       
+        git config --global user.email "actions@users.noreply.github.com"
+        git add -A
+        timestamp=$(date -u)
+        git commit --allow-empty  -m "Updated abstract data: ${timestamp}"
+        git push
