--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -44,7 +44,6 @@ jobs:
       run: |-
         git config --global user.name "db bot"       
         git config --global user.email "actions@users.noreply.github.com"
-        # jq -s '.' ash-files/doi_json/*.json | sqlite-utils upsert ash-db/abstracts.db abstracts - --pk=doi --alter
         find -maxdepth 1 -type f -path ash-files/doi_json -name \*.json -exec cat {} + | jq -s . > output.json
         sqlite-utils upsert ash-db/abstracts.db abstracts output.json --pk=doi --alter
         cd ash-db
@@ -56,6 +55,8 @@ jobs:
         echo ""
         echo "Current number of items in db:"
         sqlite-utils abstracts.db "SELECT count(*) from abstracts"
+        echo "Current number of scraped items in db:"
+        sqlite-utils abstracts.db "SELECT count(*) from abstracts WHERE is_scraped = 1"
         echo ""
         echo "Current start url page number:"
         sqlite-utils abstracts.db "SELECT MAX(start_url_page_num) from abstracts"
