lat lon and remote metadata

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,9 @@ jobs:
           --setting default_page_size 300 \
           --token $NOW_TOKEN \
           --project ash-abstracts \
-          --static static:static\
+          --static static:static \
+          --metadata metadata.json \
           --install datasette-json-html \
           --install datasette-cluster-map \
+          --install datasette-remote-metadata \
           --public
