--- a/.github/workflows/scrapeDOI.yml
+++ b/.github/workflows/scrapeDOI.yml
@@ -59,7 +59,7 @@ jobs:
         git push
     - name: Scrape DOI
       if: |-
-        !contains(github.event.head_commit.message, 'CLEAN_DOI') ||  github.event_name == 'schedule'
+        !contains(github.event.head_commit.message, 'CLEAN_DOI') && contains(github.event.head_commit.message, 'DOI') || github.event_name == 'schedule'
       run: |-
         echo " " > .gitignore
         cd scrape_ash/scrape_ash/
