--- a/.github/workflows/mkdb.yml
+++ b/.github/workflows/mkdb.yml
@@ -48,6 +48,8 @@ jobs:
         find -maxdepth 1 -type f -name \*.json -exec cat {} + | jq -s . > ../../output.json
         cd ../..
         sqlite-utils upsert ash-db/abstracts.db abstracts output.json --pk=doi --alter
+        sqlite-utils enable-counts ash-db/abstracts.db
+        sqlite-utils optimize ash-db/abstracts.db
         cd ash-db
         git add *.db
         git commit --amend --no-edit
