--- a/.github/workflows/wbhx.yml
+++ b/.github/workflows/wbhx.yml
@@ -22,29 +22,16 @@ jobs:
         key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
         restore-keys: |
           ${{ runner.os }}-pip-
-    - uses: actions/cache@v2
-      name: Configure node caching
-      with:
-        path: ~/.npm
-        key: ${{ runner.os }}-node-
-        restore-keys: |
-          ${{ runner.os }}-node-
     - name: Install Python dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         datasette install datasette-publish-vercel
-    - name: Install npm dependencies
-      run: sudo npm install -g puppeteer-cli --unsafe-perm=true
-    - name: make database
-      run: sqlite-utils insert wb.db wbhx get_wbg_data/income_group_history.csv --csv
+    - name: Make database
+      run: sqlite-utils insert wb.db wbhx get_wbg_data/income_group_history.csv --csv --pk="Country Code"
     - name: Soundness check
       run: |-
         datasette wb.db --get / | grep "wbhx"
-    - name: Setup Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '12.x'
     - name: Deploy Datasette using Vercel
       env:
         NOW_TOKEN: ${{ secrets.NOW_TOKEN }}
